@@ -15,6 +15,8 @@ Core and Builtins
 Library
 -------
 
+- Issue #8230: Fix Lib/test/sortperf.py.
+
 - Issue #8620: when a Cmd is fed input that reaches EOF without a final
   newline, it no longer truncates the last character of the last command line.
 
